[package]
name = "aidungeon2-cli"
version = "0.1.0"
authors = ["Petr Šťastný <petr.stastny01@gmail.com>"]
edition = "2018"
repository = "https://github.com/SoptikHa2/aidungeon2-cli"
documentation = "https://github.com/SoptikHa2/aidungeon2-cli"
description = "Library + binary executable to interact with AI Dungeons 2 mobile API"
license = "MIT"

[[bin]]
name = "aidungeon2-cli"
path = "src/cli.rs"

[lib]
name = "aidungeon2_api"
path = "src/lib.rs"

[dependencies]
reqwest = "0.9.24"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"