[package]
name = "aidungeon2-cli"
version = "1.0.0"
authors = ["Petr Šťastný <petr.stastny01@gmail.com>"]
edition = "2018"
repository = "https://github.com/SoptikHa2/aidungeon2-cli"
documentation = "https://github.com/SoptikHa2/aidungeon2-cli"
readme = "README.md"
keywords = ["AI", "AI Dungeon", "CLI", "game", "rpg"]
categories = ["games", "command-line-utilities"]
description = "Library + binary executable to interact with AI Dungeons 2 mobile API. Allows one to play (or build application) to play AI Dungeon 2. It uses mobile API to access and use remote servers, so no special HW is required."
license-file = "LICENSE"

[[bin]]
name = "aidungeon2-cli"
path = "src/cli.rs"

[lib]
name = "aidungeon2_api"
path = "src/lib.rs"

[dependencies]
http = "0.2.0"
reqwest = "0.9.24"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
ansi_term = "0.12.1"